--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x]
+        node-version: [16.x, 18.x, 20.x]
     
     steps:
       - uses: actions/checkout@v4
@@ -32,40 +32,4 @@ jobs:
       - name: Run type checking
         run: npm run test:types-check
   
-  # Optional: Add a publish job that runs after tests pass
-  publish:
-    name: Publish to npm
-    needs: test
-    runs-on: windows-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Check if version has been updated
-        id: check
-        run: |
-          PACKAGE_VERSION=$(node -p "require('./package.json').version")
-          if npm view win-media-control@$PACKAGE_VERSION version 2>/dev/null; then
-            echo "Version $PACKAGE_VERSION already published"
-            echo "should_publish=false" >> $GITHUB_OUTPUT
-          else
-            echo "Version $PACKAGE_VERSION not yet published"
-            echo "should_publish=true" >> $GITHUB_OUTPUT
-          fi
-      
-      - name: Publish to npm
-        if: steps.check.outputs.should_publish == 'true'
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
